# Simulation

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MakeFile.mak  MyApp.vcxproj  MyApp.vcxproj.filters  Online C++ Compiler - online editor.html  README.md  RocketLanding.sln  TODO.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  data.csv  test
Config/: config.json
buid/: drone  rocket
configs/:  Battery_Config.toml  Battery_Config.toml  Drone_Config.toml  Rocket_Config.toml  motor_MN1010.toml  propeller.toml
flight_computer/: CMakeLists.txt
flight_computer/config/: communication.toml
flight_computer/include/: communication.h  telemetry_packet.h  thread_manager.h
flight_computer/src/: communication.cpp  flight_computer.cpp
flight_computer/telemetry/include/: com_utility.h  communication.h  telemetry_packet.h
flight_computer/telemetry/src/: communication.cpp
ground_station/: CMakeLists.txt
ground_station/config/: communication.toml
ground_station/include/: telemetry_ground.h
ground_station/src/: ground_station.cpp  telemetry_ground.cpp
ground_station/telemetry/include/: telemetry_ground.h
ground_station/telemetry/src/: telemetry_ground.cpp
include/: MySim.h  PIDController.h  RungeKutta.h  aero.h  battery.h  constants.h  control.h  drone.h  droneControl.h  forceApplied.h  getRotation.h  linearInterpolation.h  logs.h  motor.h  motorDyno.h  odeIterator.h  propeller.h  quaternion.h  rocket.h  rotationMatrix.h  sensors.h  toml.h  unreal.h  vectorMath.h  vehicle.h  windGenerator.h
include/control/: PIDController.h  PIDGains.h  PIDGainsConnector.h  PIDTestScenarios.h  PIDTypes.h  droneControl.h  droneCostFunction.h  dronePIDControl.h
include/core/: forceApplied.h  getRotation.h  pythonConnector.h  quaternion.h
include/dynamics/: drone.h  vehicle.h
include/sim/: MySim.h  logs.h  utility.h
include/subsystems/: droneDependencyInjector.h  motor.h  motorDyno.h  propeller.h  sensors.h
include/utility/: movingAverage.h  utility.h
simulation/: CMakeLists.txt  README.md  TODO.md  test
simulation/configs/: Battery_Config.toml  Drone_Config.toml  Motor_MN1010.toml  propeller.toml
simulation/include/control/: PIDController.h  PIDGains.h  PIDTestScenarios.h  PIDTypes.h  control.h  controlRequestStructs.h  droneControl.h  droneControllerBase.h  droneCostFunction.h  dronePIDControl.h  mochStateEstimation.h  stateEstimation.h  stateEstimationBase.h  stateInfo.h
simulation/include/core/: RungeKutta.h  coordinateSystem.h  droneState.h  filtering.h  forceApplied.h  getRotation.h  indexVectors.h  linearInterpolation.h  odeIterator.h  poseRotation.h  poseState.h  quaternion.h  rotationMatrix.h  vectorMath.h
simulation/include/dynamics/: drone.h  rocket.h  vehicle.h  windGenerator.h
simulation/include/sim/: MySim.h  Untitled-1.cpp  droneSimulation.h  simulation.h  toml.h
simulation/include/subsystems/: battery.h  droneElectrical.h  droneSensorSuite.h  motor.h  motorDyno.h  propeller.h  sensorPacket.h  sensors.h
simulation/include/utility/: logger.h  time_manager.h  utility.h
simulation/src/control/: PIDController.cpp  bayesianOptimization.py  droneControl.cpp  dronePIDControl.cpp  stateEstimation.cpp  testGlobals.cpp
simulation/src/core/: RungeKutta.cpp  forceApplied.cpp  getRotationAngles.cpp  odeIterator.cpp  quaternion.cpp  rotationMatrix.cpp
simulation/src/dynamics/: drone.cpp  rocket.cpp  vehicle.cpp
simulation/src/scripts/: flightControlBridgeUDP.py  graphData.py  logPloter.py
simulation/src/sim/: MySim.cpp  droneMain.cpp  dronePIDGains.cpp  droneSim.cpp  logs.cpp  motorBatteryPropellerTest.cpp  toml.cpp
simulation/src/static/3d/: falcon.mtl
simulation/src/static/css/: landing.css  preset.css  rocketStyle.css
simulation/src/static/js/: rocketScriptWin.js
simulation/src/subsystems/: battery.cpp  droneDependencyInjector.cpp  droneElectrical.cpp  droneSensorSuite.cpp  motor.cpp  sensors.cpp
simulation/src/templates/: creatorCorner.html  landingPage.html  simulationWin.html
simulation/src/utility/: logger.cpp  time_manager.cpp
simulation/tests/: PIDControllerTest.cpp  aeroTest.cpp  logsTest.cpp  momentValidationTest.cpp  motoTest.cpp  quaternionTests.cpp  stateEstimationTest.cpp  testPoseRotation.cpp  testVectorMath.cpp  tests.cpp  timeManagerTest.cpp
simulation/tests/testConfigs/: drone_test_config.toml  motor_test_config.toml
src/: 3dEnvironment.py  MySim.cpp  PIDController.cpp  RungeKutta.cpp  aero.cpp  battery.cpp  constants.cpp  control.cpp  drone.cpp  droneControl.cpp  droneMain.cpp  flask.py  forceApplied.cpp  getRotationAngles.cpp  logs.cpp  main.cpp  main.html  main.py  motor.cpp  motorBatteryPropellerTest.cpp  odeIterator.cpp  plot.py  preset.html  quaternion.cpp  rocket.cpp  rocketLanding.html  rocketMain.cpp  rocketScript.js  rocketStyle.css  rotationMatrix.cpp  sensors.cpp  simulation.html  test  test.cpp  test.html  toml.cpp  unreal.cpp  vectorMath.cpp  vectorMath.h  vehicle.cpp
src/control/: PIDController.cpp  bayesianOptimization.py  control.cpp  droneControl.cpp  dronePIDControl.cpp
src/core/: forceApplied.cpp  getRotationAngles.cpp  quaternion.cpp
src/dynamics/: aero.cpp  drone.cpp  rocket.cpp  vehicle.cpp
src/scripts/: BayesianOptimizationPID.py  Motor example.py  database.py  import subprocess.py  plot.py
src/sim/: MySim.cpp  droneMain.cpp  dronePIDGains.cpp  motorBatteryPropellerTest.cpp  rocketMain.cpp  toml.cpp
src/static/css/: landing.css  preset.css  rocketStyle.css
src/static/js/: fireScript.js  graphs.js  rocketScript.js  rocketScriptWin.js  starfield.js
src/subsystems/: battery.cpp  droneDependencyInjector.cpp  motor.cpp  sensors.cpp
src/templates/: creatorCorner.html  firetest.html  landingPage.html  preset.html  rocketScript.js  simulation.html  simulationWin.html  test.js  testFire.js
tests/: appliedForceTest.cpp  csvTest.cpp  engineTest.cpp  getRotationTest.cpp  liftVectTest.cpp  rotationMatrixTest.cpp  test.cpp  testVectorMath.cpp  tests.cpp  thrustTest.cpp  vehicleTest.cpp
